src/test/deca/context/invalid/created/acces_field/acces_field_change_type.deca
// Description :
//   	acces champs sur sous_type avec changement de type static
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 16 : (3.65) x n'est pas un attribut de la classe A

class A {}

class B extends A {
int x;
}

{
A a = new B();
a.x;
}